--- a/jenkins-deployment.yaml
+++ b/jenkins-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins
+  labels:
+    app: jenkins
 spec:
   replicas: 1
   selector:
@@ -14,14 +16,14 @@ spec:
     spec:
       serviceAccountName: jenkins
       containers:
-      - name: jenkins
-        image: jenkins/jenkins:lts-jdk17
-        ports:
-          - containerPort: 8080
-          - containerPort: 50000
-        volumeMounts:
-          - name: jenkins-home
-            mountPath: /var/jenkins_home
+        - name: jenkins
+          image: jenkins/jenkins:lts-jdk17
+          ports:
+            - containerPort: 8080
+            - containerPort: 50000
+          volumeMounts:
+            - name: jenkins-home
+              mountPath: /var/jenkins_home
       volumes:
         - name: jenkins-home
           emptyDir: {}
